# CDRCODR

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
crates/cli/: ADAPTERS.md  Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: apply_preview.rs  content_fallback.rs  content_preview_fallback.rs  content_priority.rs  e2e_gen_preview_apply.rs  gen_dry_run.rs  gen_dry_run_mock_state.rs  gen_exit_codes.rs  gen_intermittent_cli.rs  gen_intermittent_matrix.rs  gen_mock.rs  gen_network_error.rs  gen_protocol_error.rs  media_type_binary.rs  media_type_text.rs  mock_reset.rs  session_cli.rs
crates/core/: Cargo.toml  INTEGRATION_TESTS.md
crates/core/src/: artifact.rs  async_backend.rs  backend.rs  config.rs  git.rs  lib.rs  patch.rs  session.rs
crates/core/src/adapters/: lmstudio.rs  mock.rs  mod.rs  ollama.rs  trait_adapter.rs
crates/core/tests/: git_helper.rs  integration_adapter_hyper.rs  integration_adapter_server.rs  parse_artifacts_tests.rs  patch_applier.rs  patch_model.rs  test_adapters.rs  test_artifact_metadata.rs  test_config.rs  test_mock_error.rs  test_session_persistence.rs  test_session_serialization.rs
specs/001-create-a-coding/: adapters.md  claudecode-gap-analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-a-coding/contracts/: cprcodr-api-openapi.yaml  (+1 more)
tests/contract/: test_generate.rs  test_session.rs
tests/integration/: test_init.rs
