[package]
name = "cprcodr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde_json = "1.0"
cprcodr-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.5"
predicates = "2.1"
