[package]
name = "cprcodr-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
toml = "0.7"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"], optional = true }

[dev-dependencies]
# used by tests
tempfile = "3.5"
assert_cmd = "2.0"

[features]
# Enable integration tests that require a local HTTP server (hyper)
integration-tests = ["hyper"]
